--- a/src/ClueInLetters/ClueInLetters.css
+++ b/src/ClueInLetters/ClueInLetters.css
@@ -74,6 +74,7 @@
   position: absolute;
   top: 25px;
   left: 10px;
+  height : 8%;
   width: 10px; /* Fixed width for sidebar */
   display: flex;
   flex-direction: column;
@@ -93,14 +94,15 @@
 }
 
 .speed-slider {
-  width: 50px; /* Make the slider vertical */
-  height: 100%;
+  width: 60px; /* Make the slider vertical */
+  height: 30%;
+  padding-left: 5px; 
   writing-mode: bt-lr; /* Flip the slider vertically */
   transform: rotate(270deg); /* Rotate for vertical alignment */
   appearance: none;
   background-color: #f0ebeb;
   outline: none;
-  border-radius: 5px;
+  border-radius: 10px;
   margin: 10px 10px;
 }
 
