--- a/src/OurGallery/OurGallery.css
+++ b/src/OurGallery/OurGallery.css
@@ -24,7 +24,7 @@
 }
 
 .right-box {
-    width : 50%;
+    width : 65%;
     display: flex; /* Flexbox로 자식 요소 배치 */
     flex-direction: column;
     align-items: center;
@@ -33,25 +33,29 @@
     background: #ffffff;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    gap: 20px;
 }
 
 .left-box  {
-    flex: 1;
+    width : 35%;
+    display: flex; /* Flexbox 사용 */
     padding: 20px;
     background: #ffffff;
     border-radius: 10px;
+    flex-direction: column; /* 세로 정렬 */
+    justify-content: flex-start; /* 내용물 위쪽부터 배치 */
+    align-items: center; /* 가로 중앙 정렬 */
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 
 .left-box h3, .right-box h3 {
     font-size: 18px;
-    margin-bottom: 15px;
     color: #333;
 }
 
 
-.left-box input, .left-box select, .left-box button {
+.left-box input, .left-box select {
     display: block;
     margin: 10 px 0;
     padding: 10px;
@@ -62,14 +66,21 @@
 }
 
 .left-box button {
-    background-color: #007bff;
+    margin-top : auto; /* 버튼을 가장 아래로 밀기 */
+    display: block;
+    background-color: #b8a894;
     color: white;
     cursor: pointer;
+    margin: 0 px 0;
+    padding: 10px;
+    width: 90%;
+    border: 1px solid #ddd;
+    border-radius: 5px;
     transition: background-color 0.3s ease;
 }
 
 .left-box button:hover {
-    background-color: #0056b3;
+    background-color: #f79c2e;
 }
 
 .error-message {
@@ -87,17 +98,18 @@
 }
 
 .image-container img {
-    max-width: 100%; /* 이미지가 박스의 절반씩 차지 */
-    max-height: 80%;
-    object-fit: contain; /* 이미지 비율 유지 */
-    border-radius: 10px; /* 이미지 테두리 둥글게 */
+    width: 400px; /* 고정된 너비 */
+    height: 280px; /* 고정된 높이 */
+    object-fit: cover; /* 이미지 비율 유지하면서 잘라냄 */
+    border-radius: 10px; /* 둥근 모서리 */
 }
 
 .right-box button {
+    margin-top: auto; /* 버튼을 가장 아래로 밀기 */
     display: block;
-    width: 70%;
+    width: 90%;
     padding: 10px;
-    background-color: #28a745;
+    background-color: #b8a894;
     color: white;
     border: none;
     border-radius: 5px;
@@ -107,7 +119,7 @@
 }
 
 .right-box button:hover {
-    background-color: #218838;
+    background-color: #f79c2e;
 }
 
 
@@ -144,9 +156,9 @@
 }
 
 .image-track img {
-    width: 280px;
+    width: 292px;
     height: 200px;
-    margin: 0 5px;
+    margin: 0 10px;
     object-fit: cover;
     border-radius: 5px;
     pointer-events: none; /* Disable interactions with images */
@@ -156,7 +168,7 @@
 .rotate-boundary {
     width: 20px;
     height: 100%;
-    background-color: #fabd4cd2;
+    background-color: #fdd700fd;
     cursor: pointer;
 }
 
